# qpoases_ros

./: CMakeLists.txt  README.md  linker_opts.diff  package.xml
