<?xml version="1.0"?>
<package>
  <name>qpoases_ros</name>
  <version>0.0.1</version>
  <description>The qpOASES quadratic programming solver in a ROS package.</description>

  <maintainer email="p.gorczak@gmail.com">Philipp Gorczak</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
