<?xml version="1.0"?>
<package format="2">
  <name>qpoases_ros</name>
  <version>0.0.1</version>
  <description>The qpOASES quadratic programming solver in a ROS package.</description>

  <maintainer email="p.gorczak@gmail.com">Philipp Gorczak</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cython</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>subversion</build_depend>

</package>
